# simsuite

./: .gitignore  .impeccable.md  .npmrc  AGENTS.md  PLAN.md  README.md  SESSION_HANDOFF.md  SimSuite_PRD_Part_16_Test_Plan_and_QA.md  SimSuite_PRD_Part_5_Technical_Architecture (1).md  SimSuite_PRD_Part_6_Codex_Implementation_Blueprint.md  SimSuite_PRD_Part_7_UX_UI_Design_Spec.md  check-data-source.cjs  check-items.cjs  diagnose-folder.cjs  diagnose-mods.cjs  diagnose-mods2.cjs  index.html  mode-compare.cjs  nul  package-lock.json  package.json  patch-babel.ps1  pnpm-lock.yaml  simsuite-folder-verify.cjs  smoke-library-redesign.cjs  test-page-size.cjs  tsconfig.json  verify-5g-final.cjs  verify-5g.cjs  verify-page-size.cjs  verify-page-size2.cjs  verify-phase5ag.cjs  verify-phase5ag.mjs  verify-phase5f.cjs  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  Extensive Index of Sims 4 Mods & Resources.md  ICON-ASSET-PLAN.md  (+11 more)
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/adapters/: curseforge.rs  curseforge_test.rs  ea_broken_mods.rs  errors.rs  feed.rs  generic_page.rs  generic_page_test.rs  github.rs  mod.rs  nexus.rs  structured_page.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/bundle_detector/: mod.rs
src-tauri/src/core/category_audit/: mod.rs
src-tauri/src/core/content_versions/: mod.rs
src-tauri/src/core/creator_audit/: mod.rs
src-tauri/src/core/downloads_watcher/: mod.rs
src-tauri/src/core/duplicate_detector/: mod.rs
src-tauri/src/core/file_inspector/: mod.rs
src-tauri/src/core/filename_parser/: mod.rs
src-tauri/src/core/install_profile_engine/: mod.rs
src-tauri/src/core/library_index/: mod.rs
src-tauri/src/core/move_engine/: mod.rs
src-tauri/src/core/rule_engine/: mod.rs
src-tauri/src/core/scanner/: mod.rs
src-tauri/src/core/snapshot_manager/: mod.rs
src-tauri/src/core/special_mod_versions/: mod.rs
src-tauri/src/core/validator/: mod.rs
src-tauri/src/core/watch_polling/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/schema/: mod.rs
src-tauri/src/seed/: mod.rs
src-tauri/src/services/: candidate_discovery.rs  candidate_scorer.rs  local_inventory.rs  mod.rs  rate_limiter.rs  scheduler.rs  snapshot_store.rs  source_learning.rs  update_decision.rs  update_events.rs
(+134 files in other folders)
