[package]
name = "simsuite"
version = "0.1.0"
description = "Local-first Sims content management suite"
authors = ["likwi"]
edition = "2021"

[lib]
name = "simsuite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["clock", "serde"] }
dirs = "6.0.0"
flate2 = "1.1.5"
hex = "0.4.3"
notify = "8.2.0"
rar = "0.4.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1.12.2"
scraper = "0.20"
rfd = "0.15.4"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sevenz-rust = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
uuid = { version = "1.16.0", features = ["v4"] }
url = { version = "2.5", features = ["serde"] }
tauri = { version = "2.10.3", features = ["tray-icon"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
walkdir = "2.5.0"
webbrowser = "1.0.6"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.23.0"
